--- a/calculator.html
+++ b/calculator.html
@@ -3,42 +3,36 @@
   <head>
     <meta charset="UTF-8">
     <title></title>
-  <script>
-var angelica = function (adjective ){
-  console.log('hi, Angelica!  you are sweet I love you! and I think you are:' + '\n' +
-    adjective.toUpperCase())
-}
-  </script>
+    <script type="text/javascript" src="calculator.js"></script>
     <link rel="stylesheet" href="main.css" type="text/css">
   </head>
   <body>
     <div class="wrapper">
-      <div class="header"></div>
+      <div class="header">My Calculator</div>
       <div class="main">
 	<div class="calculator">
-	  <div class="screen">hi!</div>
-	  <button class="ac">AC</button>
-	  <button class="cl">CL</button>
-	  <button class=" 1">1</button>
-	  <button class=" 2">2</button>
-	  <button class=" 3">3</button>
-	  <button class=" 4">4</button>
-	  <button class=" 5">5</button>
-	  <button class=" 6">6</button>
-	  <button class=" 7">7</button>
-	  <button class=" 8">8</button>
-	  <button class=" 9">9</button>
-	  <button class=" z">0</button>
-	  <button class=" plus">+</button>
-	  <button class=" minus">-</button>
-	  <button class=" multi">*</button>
-	  <button class=" divide">/</button>
-	  <button class=" equals">=</button>
-	  <button class=" period">.</button>
+	  <div class="screen" id="screen">hi!</div>
+	  <button class="ac" value="AC" onClick="testDisplay(this.value)">AC</button>
+	  <button class="ce" value="CE" onClick="testDisplay(this.value)">CE</button>
+	  <button class="1" value="1" onClick="testDisplay(this.value)" >1</button>
+	  <button class="2" value="2" onClick="testDisplay(this.value)">2</button>
+	  <button class="3" value="3" onClick="testDisplay(this.value)">3</button>
+	  <button class="4" value="4" onClick="testDisplay(this.value)">4</button>
+	  <button class="5" value="5" onClick="testDisplay(this.value)">5</button>
+	  <button class="6" value="6" onClick="testDisplay(this.value)">6</button>
+	  <button class="7" value="7" onClick="testDisplay(this.value)">7</button>
+	  <button class="8" value="8" onClick="testDisplay(this.value)">8</button>
+	  <button class="9" value="9" onClick="testDisplay(this.value)">9</button>
+	  <button class="z" value="0" onClick="testDisplay(this.value)">0</button>
+	  <button class="plus" value="plus" onClick="testDisplay(this.value)">+</button>
+	  <button class="minus" value="minus" onClick="testDisplay(this.value)">-</button>
+	  <button class="multiply" value="multiply" onClick="testDisplay(this.value)">*</button>
+	  <button class="divide" value="divide" onClick="testDisplay(this.value)">/</button>
+	  <button class="equals" value="cool" onClick="testDisplay(this.value)">=</button>
+	  <button class="period" value="." onClick="testDisplay(this.value)">.</button>
 	</div>
       </div>
-    </div>
-    <div class="footer"></div>
+      <div class="footer"></div>
     </div>
   </body>
 </html>
