--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <div class="main">
 	<div class="calculator">
 	  <div class="screen" id="screen">hi!</div>
-	  <button class="ac" value="AC" onClick="testDisplay(this.value)">AC</button>
-	  <button class="ce" value="CE" onClick="testDisplay(this.value)">CE</button>
-	  <button class="1" value="1" onClick="enterNumber(this.value)" >1</button>
+	  <button class="ac" value="AC" onClick="allClear()">AC</button>
+	  <button class="ce" value="CE" onClick="clearEntry()">CE</button>
+	  <button class="1" value="1" onClick="enterNumber(this.value)">1</button>
 	  <button class="2" value="2" onClick="enterNumber(this.value)">2</button>
 	  <button class="3" value="3" onClick="enterNumber(this.value)">3</button>
 	  <button class="4" value="4" onClick="enterNumber(this.value)">4</button>
