Created distinct functions and improved styling
With this commit I broke apart that single function into fully separate,
distinct purpose functions. I also separated the calculationb etween
grabbing the right numbers and then doing the math function on them.

Lastly, I improved the colors in the css

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 	  <button class="9" value="9" onClick="enterNumber(this.value)">9</button>
 	  <button class="z" value="0" onClick="enterNumber(this.value)">0</button>
 	  <button class="period" value="." onClick="enterNumber(this.value)">.</button>
-	  <button class="plus" value="plus" onClick="testDisplay(this.value)">+</button>
-	  <button class="minus" value="minus" onClick="testDisplay(this.value)">-</button>
-	  <button class="multiply" value="multiply" onClick="testDisplay(this.value)">*</button>
-	  <button class="divide" value="divide" onClick="testDisplay(this.value)">/</button>
-	  <button class="equals" value="cool" onClick="testDisplay(this.value)">=</button>
+	  <button class="plus" value="+" onClick="addSymbol(this.value)">+</button>
+	  <button class="minus" value="-" onClick="addSymbol(this.value)">-</button>
+	  <button class="multiply" value="*" onClick="addSymbol(this.value)">*</button>
+	  <button class="divide" value="/" onClick="addSymbol(this.value)">/</button>
+	  <button class="equals" value="=" onClick="pressEquals()">=</button>
 	</div>
       </div>
-      <div class="footer"></div>
+      <div class="footer">made by your friend Zach Mandeville</div>
     </div>
   </body>
 </html>
